# backend-project-ctt

./: docker-compose.yml  pyproject.toml
app/: main.py
app/core/: database.py  settings.py
app/routes/: cliente_routes.py
app/schemas/: cliente_models.py
app/services/: cliente_services.py
